# mcp-dblp

./: .gitignore  README.md  instructions_prompt.md  pyproject.toml
src/mcp_dblp/: __init__.py  dblp_client.py  instructions_prompt.md  server.py  test_client.py  tools.py
