[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-dblp"
version = "1.2.1"
description = "An MCP server that provides access to the DBLP computer science bibliography for LLMs."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Stefan Szeider", email = "stefan@szeider.net"}
]
keywords = ["mcp", "dblp", "bibliography", "citations", "bibtex", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.20.0",
    "requests>=2.32.5"
]

[project.urls]
Homepage = "https://github.com/szeider/mcp-dblp"
Repository = "https://github.com/szeider/mcp-dblp"
Issues = "https://github.com/szeider/mcp-dblp/issues"

[project.scripts]
mcp-dblp = "mcp_dblp.server:main"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "T20",   # flake8-print (detect print statements)
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # Line too long (let formatter handle it)
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["T20"]  # Allow print statements in tests

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]


